--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@
       href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&family=Staatliches&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari&display=swap" rel="stylesheet">
   </head>
 
   <body>
